<resources>
    <string name="app_name">ActivityAndFragment</string>
    <string name="title_activity_demo_preference">DemoPreferenceActivity</string>
    <string name="autosave_off">自动保存：关闭</string>
    <string name="autosave_on">自动保存:开启</string>
    <string name="autosave_proress">自动保存进度</string>
    <string name="select_gender">选择您的性别</string>
    <string name="gender">性别</string>
    <string name="input_username">填写用户名</string>
    <string name="your_username">你所用的用户名为:</string>
    <string name="user_information_setting">用户信息设置</string>
    <string name="select_ringtone">选择铃声</string>
    <string name="set_ringtone">设置铃声</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="ligth_setting">灯光设置</string>
    <string name="light_strength">灯光强度</string>
    <string name="select_ligth_strength">选择灯光强度</string>
    <string name="text_setting">文本设置</string>
    <string name="auto_scroll">自动滚动</string>
    <string name="auto_scroll_on">自动滚动：打开</string>
    <string name="auto_scroll_off">自动滚动：关闭</string>
    <string name="sys_setting">系统设置</string>
    <string name="user_setting">用户信息设置</string>
    <string name="about">关于</string>
    <string name="about_this_ex">关于本实验</string>
    <string name="setting_op">设置操作</string>
    <string name="configure_global_setting">配置全局设置</string>
    <string name="application_setting">应用设置</string>
    <string name="my_location">我的位置</string>
    <string name="apply_wireless">使用无线网络</string>
    <string name="apply_wireless_summary">通过无线网络查看位置</string>
    <string name="apply_gps">使用PGS</string>
    <string name="apply_gps_summary">使用GPS进行定位</string>
    <string name="wireless_network_setting">无线和网络配置</string>
    <string name="apply_fly">使用飞行模式</string>
    <string name="apply_fly_summary">禁用所有无限连接</string>
    <string name="wifi">WIFI</string>
    <string name="wifi_summary">打开Wi-Fi</string>
    <string name="wifi_setting">Wi-Fi设置</string>
    <string name="wifi_setting_summary">设置和管理无线接入点</string>
    <string name="bluetooth">蓝牙</string>
    <string name="bluetooth_summary">启用蓝牙</string>
    <string name="bluetooth_setting">蓝牙设置</string>
    <string name="blue_tooth_setting_summary">管理连接、设备设备名称和可检测性</string>
    <string name="life_cycle_test">Activity生命周期过程中的回调函数测试，请查看LogCat界面的输出与该Activity行为的关系</string>
    <string name="startActivityWithNoResult">启动没有返回值的Activity</string>
    <string name="startActivityWithResult">启动具有返回值的Activity</string>
    <string name="ResultValue">返回值：</string>
    <string name="returnWithOutFinish">不结束自身返回</string>
    <string name="returnWithFinish">结束自身返回</string>
    <string name="txtViewInput">输入要返回的值</string>
    <string name="returnWithResult">带值返回</string>
    <string name="showResult">前一个Activity传递过来的数据为：</string>
    <string name="StaticFrament">静态法使用Fragment</string>
    <string name="DynamicFragment">动态法使用Fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="intro">介绍：</string>
    <string name="about_intro">此处将会显示专业介绍</string>
    <string name="open_dial">拨打电话</string>
    <string name="open_web">打开浏览器</string>
    <string name="set_wifi">设置WIFI</string>
</resources>
