<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
    <header android:fragment="cn.edu.hqu.cst.activityandfragment.view.fragment.SysPrefsFragment"
        android:icon="@drawable/icon_sys_prefs"
        android:title="@string/sys_setting"
        android:summary="@string/sys_setting"/>
    <header android:fragment="cn.edu.hqu.cst.activityandfragment.view.fragment.UserPrefsFragment"
        android:icon="@drawable/icon_user_prefs"
        android:title="@string/user_setting"
        android:summary="@string/user_setting">
        <extra
            android:name="website"
            android:value="http://www.hqu.edu.cn"/>
    </header>
    <header
        android:icon="@drawable/icon_about"
        android:title="@string/about"
        android:summary="@string/about_this_ex">
        <intent android:action="android.intent.action.VIEW"
            android:targetClass="org.chromium.webview_shell.WebViewBrowserActivity"
            android:targetPackage="org.chromium.webview_shell"
            android:data="http://www.hqu.edu.cn"/>
    </header>
</preference-headers>